# watch-a-model-grok

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
training/: ablate.py  align.py  config.py  data.py  export_ablations.py  export_web.py  gif.py  measures.py  model.py  train.py
web/: README.md  next.config.ts  package.json  pnpm-lock.yaml
web/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
web/components/: AblationCurves.tsx  AblationTable.tsx  AttentionRouting.tsx  Code.tsx  DataLoader.tsx  EmbeddingScatter.tsx  FftSpectrogram.tsx  FftSpectrum.tsx  LossChart.tsx  ProgressMeasure.tsx  Scrubber.tsx  Tex.tsx
web/lib/: ablations.ts  data.ts  store.ts  useResponsiveWidth.ts  waypoints.ts
web/public/ablations/: index.json  init_pytorch.json  layer_norm.json  seed_0.json  seed_7.json  wd_low.json  wd_zero.json
web/public/data/: meta.json
web/types/: react-scrollama.d.ts
